# iiiahalabdownloader

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  autocad.rs  cache.rs  error.rs  installer.rs  lib.rs  main.rs  process.rs  sketchup.rs  updater.rs
src/styles/: components.css  tokens.css
